# python_web_frameworks

./: .gitignore  README.md
django/: README.md  setup.cfg
django/django_app/: db.sqlite3
django/django_app/django_app/: settings.py  urls.py
django/django_app/todolist/: models.py  urls.py  views.py
django/django_app/todolist/migrations/: 0001_initial.py
django/scripts/: run_dev.sh  test.sh
fastapi/: README.md  setup.cfg
fastapi/scripts/: run_dev.sh
fastapi/src/: app.py  db.py  db.sqlite  models.py
flask/: .gitignore  README.md  setup.cfg
flask/scripts/: run_dev.sh
flask/src/: db.sqlite  main.py
flask/src/app/main/: app.py  main.py
flask/src/app/main/config/: .env.dist  __init__.py  config.py
flask/src/app/main/db/: __init__.py  db_dev.sqlite
flask/src/app/main/db/db_models/: __init__.py  todo.py
flask/src/context/: router.py  routes.py
flask/src/context/domain/main/: router.py
flask/src/context/domain/main/subdomain_one/: router.py
flask/src/context/domain/main/subdomain_one/controllers/: read_controller.py
flask/src/context/domain/main/subdomain_two/: router.py
flask/src/context/domain/main/subdomain_two/controllers/: read_controller.py
flask/src/context/shared/db_models/: __init__.py
flask/src/context/todo/main/: router.py
flask/src/context/todo/main/controllers/: __init__.py  create_controller.py  delete_controller.py  read_controller.py  update_controller.py
