[metadata]
name = multi-app
version = 0.0.1
author = Joel Glez Rod
author_email = joelgrdev@gmail.com
description = Python App - YT Downloader, frequecy analyzer and more...
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src